# rs_lib

./: .gitignore  Cargo.toml  README.md
c_project/: CMakeLists.txt  README.md  c_code.c  c_code.h  run_me.sh
resources/: file1.txt  libc_lib.dylib
src/: build.rs  c_lib.rs  c_script.rs  lib.rs  main.rs  my_mod1.rs
src/c_scripts/: double.c  third.c
src/my_path/: file1.rs  file2.rs  mod.rs
tests/: test1.rs  test2.rs
