[package]
name = "rs_lib"
version = "0.1.1"
edition = "2021"
authors = ["Guo Fei <me@guofei.site>"]
description = "一段简单的描述信息，要好好写."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "src/build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[lib]
name = "rs_lib"
path = "src/lib.rs"
#crate-type = ["cdylib"]